--- a/wb/templates/index.html
+++ b/wb/templates/index.html
@@ -12,6 +12,7 @@
       <th scope="col">Last Name</th>
       <th scope="col">REG No</th>
       <th scope="col">Course</th>
+      <th scope="col">Supervisor</th>
       <th scope="col">Topic</th>
       
     </tr>
@@ -25,6 +26,7 @@
       <td>{{d.last_name}}</td>
       <td>{{d.reg_no}}</td>
       <td> {{d.cource}} </td>
+      <td> {{d.supervisor}} </td>
       <td>{{d.topic}} </td>
     </tr>
 
